[package]
name = "serve-env"
version = "0.1.0"
authors = ["Anders Gade <andersgade1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
clap = "3.0.0-beta.1"
